fix: add space between sections on mobile footer

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -335,15 +335,24 @@ header.tg-page-header.tg-page-header--left-right {
 		margin-bottom: 0;
 	}
 
+	.tg-footer-widget-container > div:first-child {
+		h3 {
+			@media screen and (max-width: 768px) {
+				margin-top: 0;
+			}
+		}
+	}
+
 	h3 {
 		color: white;
 		text-transform: uppercase;
 		font-size: 1rem;
 		font-weight: bold;
-	}
 
-	.tg-site-footer {
-		margin: 5rem 0;
+		@media screen and (max-width: 768px) {
+			margin-bottom: 0;
+			margin-top: 3rem;
+		}
 	}
 }
 
